--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -379,6 +379,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:orientation="horizontal" >
         <LinearLayout
+            android:id="@+id/player"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -412,7 +413,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Club"
-                android:textColor="@color/white"/>
+                android:textColor="@color/black"/>
         </LinearLayout>
 
     </LinearLayout>
