--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -394,7 +394,7 @@
             android:orientation="vertical"
             >
             <ImageView
-                android:src="@drawable/cricketer2"
+                android:src="@drawable/cricketer22"
                 android:layout_width="40dp"
                 android:layout_height="40dp"/>
             <TextView
@@ -402,7 +402,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Player"
-                android:textColor="@color/white"/>
+                android:textColor="@color/black"/>
         </LinearLayout>
         <Space
             android:layout_width="100dp"
@@ -414,7 +414,7 @@
             android:orientation="vertical"
             >
             <ImageView
-                android:src="@drawable/trophy"
+                android:src="@drawable/trophy2"
                 android:layout_width="40dp"
                 android:layout_height="40dp"/>
             <TextView
@@ -422,7 +422,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Club"
-                android:textColor="@color/black"/>
+                android:textColor="@color/white"/>
         </LinearLayout>
 
     </LinearLayout>
