--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -61,6 +61,7 @@
                     android:background="@drawable/card_design">
 
                     <ImageView
+                        android:padding="10dp"
                         android:layout_marginLeft="10dp"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
@@ -167,6 +168,7 @@
                     android:background="@drawable/card_design">
 
                     <ImageView
+                        android:padding="10dp"
                         android:layout_marginLeft="10dp"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
@@ -276,6 +278,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
+                        android:padding="10dp"
                         android:src="@drawable/cv_icon"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -329,6 +332,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
+                        android:padding="15dp"
                         android:src="@drawable/cs_icon"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -417,6 +421,26 @@
             >
             <ImageView
                 android:src="@drawable/trophy2"
+                android:layout_width="40dp"
+                android:layout_height="40dp"/>
+            <TextView
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Club"
+                android:textColor="@color/white"/>
+        </LinearLayout>
+        <Space
+            android:layout_width="100dp"
+            android:layout_height="1dp"/>
+        <LinearLayout
+            android:id="@+id/history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+            <ImageView
+                android:src="@drawable/history_24"
                 android:layout_width="40dp"
                 android:layout_height="40dp"/>
             <TextView
