--- a/app/src/main/res/layout/activity_deshboard.xml
+++ b/app/src/main/res/layout/activity_deshboard.xml
@@ -985,6 +985,26 @@
                 android:text="Club"
                 android:textColor="@color/black"/>
         </LinearLayout>
+        <Space
+            android:layout_width="100dp"
+            android:layout_height="1dp"/>
+        <LinearLayout
+            android:id="@+id/history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+            <ImageView
+                android:src="@drawable/history_24"
+                android:layout_width="40dp"
+                android:layout_height="40dp"/>
+            <TextView
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Club"
+                android:textColor="@color/white"/>
+        </LinearLayout>
 
     </LinearLayout>
 
