--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -329,7 +329,7 @@
             android:orientation="vertical"
             >
             <ImageView
-                android:src="@drawable/trophy2"
+                android:src="@drawable/trophy"
                 android:layout_width="40dp"
                 android:layout_height="40dp"/>
             <TextView
@@ -349,7 +349,7 @@
             android:orientation="vertical"
             >
             <ImageView
-                android:src="@drawable/history_24"
+                android:src="@drawable/history"
                 android:layout_width="40dp"
                 android:layout_height="40dp"/>
             <TextView
