--- a/app/src/main/res/layout/activity_historydetails.xml
+++ b/app/src/main/res/layout/activity_historydetails.xml
@@ -37,7 +37,7 @@
 
     <ImageView
         android:layout_margin="20dp"
-        android:id="@+id/imageView"
+        android:id="@+id/imageView_history"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:backgroundTint="@color/white"
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Mumbai Indians"
@@ -75,7 +75,7 @@
 
             <TextView
 
-                android:id="@+id/details"
+                android:id="@+id/details_history"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
