--- a/app/src/main/res/layout/activity_deshboard.xml
+++ b/app/src/main/res/layout/activity_deshboard.xml
@@ -1002,7 +1002,7 @@
                 android:textAlignment="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Club"
+                android:text="History"
                 android:textColor="@color/white"/>
         </LinearLayout>
 
