--- a/app/src/main/res/layout/activity_historydetails.xml
+++ b/app/src/main/res/layout/activity_historydetails.xml
@@ -40,9 +40,8 @@
         android:id="@+id/imageView_history"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:backgroundTint="@color/white"
+        android:scaleType="centerCrop"
         android:background="@drawable/card_design"
-        android:padding="30dp"
         android:src="@drawable/mmb_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
