--- a/app/src/main/res/layout/activity_historydetails.xml
+++ b/app/src/main/res/layout/activity_historydetails.xml
@@ -20,7 +20,7 @@
         android:orientation="horizontal" >
         <ImageView
 
-            android:id="@+id/arraw1"
+            android:id="@+id/arraw8"
             android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:textSize="25dp"
             android:textAlignment="center"
-            android:text="About Club"
+            android:text="About History"
             android:textColor="@color/white"
             android:layout_gravity="center"/>
     </LinearLayout>
