--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -434,7 +434,7 @@
             android:layout_width="100dp"
             android:layout_height="1dp"/>
         <LinearLayout
-            android:id="@+id/history"
+            android:id="@+id/historyclub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
