--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -303,7 +303,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:orientation="horizontal" >
         <LinearLayout
-            android:id="@+id/player"
+            android:id="@+id/player3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -323,7 +323,7 @@
             android:layout_width="100dp"
             android:layout_height="1dp"/>
         <LinearLayout
-            android:id="@+id/clubicon"
+            android:id="@+id/clubicon3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -354,7 +354,7 @@
                 android:layout_height="40dp"/>
             <TextView
                 android:textAlignment="center"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="History"
                 android:textColor="@color/white"/>
